--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
+    "datetime": "^0.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-datetime": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0"
   },
