--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "datetime": "^0.0.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-datetime": "^3.1.1",
